# repsys

./: .editorconfig  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
alertmanager/: config.yaml
demo/: .gitignore  dataset.py  models.py  repsys.ini  requirements.txt  sandbox.ipynb  vae.py
demo/models/: knn.py  models.py
frontend/: .env  .eslintignore  .eslintrc.json  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  Root.jsx  api.js  const.js  index.js  store.js  utils.js
frontend/src/app/: CheckboxField.jsx  ConfirmDialog.jsx  ItemBarDialog.jsx  ItemBarEdit.jsx  ItemBarPreview.jsx  ItemBarView.jsx  ItemCardView.jsx  ItemDetailDialog.jsx  ItemListView.jsx  ItemSkeleton.jsx  api.js  (+17 more)
prometheus/: alert.rules  prometheus.yaml
repsys/: __init__.py  __main__.py  checkpoints.py  cli.py  config.py  constants.py  core.py  dataset.py  dtypes.py  errors.py  evaluator.py  evaluators.py  helpers.py  loader.py  loaders.py  metrics.py  model.py  models.py  server.py  splitter.py  storage.py  types.py  ui.py  utils.py  validators.py  web.py  website.py
repsys/dataset/: __init__.py  blueprint.py  dtypes.py  persistor.py  splitter.py  validation.py  validator.py  validators.py
repsys/model/: __init__.py  blueprint.py  evaluator.py  metrics.py  storage.py
scripts/: build-frontend.sh  build-package.sh  build.sh  copy-frontend.sh  install-locally.sh  repsys-build.sh
tests/: helpers.py  test_dataset.py  test_dataset_dtypes.py  test_dataset_validation.py
tests/dataset/: test_dtypes.py  test_validation.py
(+111 files in other folders)
