[tool.poetry]
name = "repsys"
version = "0.1.0"
description = "Recommendation systems modeling environment."
authors = ["Jan Safarik <cowjen01@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
include = ["LICENSE.txt", "README.md", "frontend/build/**/*"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^8.0.3"
sanic = "^21.9.1"
coloredlogs = "^15.0.1"
numpy = "^1.21.4"
pandas = "^1.3.4"
Bottleneck = "^1.3.2"
scipy = "^1.7.1"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-sanic = "^1.9.1"

[tool.black]
line-length = 80
target-version = ["py37", "py38"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repsys = "repsys.__main__:main"
