[flake8]
max-line-length = 88
max-doc-length = 88
# See these resources for descriptions of the error codes:
# E***, F***, W*** : https://flake8.pycqa.org/en/latest/user/error-codes.html
# D***: http://www.pydocstyle.org/en/stable/error_codes.html
# ignore = W503
docstring-convention = google

[metadata]
license_files = LICENSE.txt
